# my-side-effect-tracker

./: .gitignore  README.md
side-effect-tracker/agent_app/: agent.py  clinical_trials.py  main.py  models.py  pyproject.toml
side-effect-tracker/agent_app/templates/: index.html
side-effect-tracker/docs/: 2026-02-23-direct-api-mode.md  SETUP.md  bugfixes.md
